@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.wofvideo" name="wofvideo" version="1.0.13" provider-name="btibi,vargalex">
+<addon id="plugin.video.wofvideo" name="wofvideo" version="1.0.14" provider-name="btibi,vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -14,6 +14,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news>
+			1.0.14 - Leia bugFix (CSS selector helyett visszatérés a find_all használatára)
 			1.0.13 - Forrás változás követése
 			1.0.12 - URL feloldás BugFix
 			1.0.11 - Főmenü átalakítása, megjelenés éve szerinti bontás, sorozatok javítása
